services/frontend/deployment.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:struct", "struct")

#@ app = data.values.frontend
#@ appName = app.appName
#@ env = struct.decode(app.env)
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: #@ appName
    namespace: #@ appName
    labels:
        name: #@ appName
spec:
    replicas: 1
    selector:
        matchLabels:
            name: #@ appName
    template:
        metadata:
            name: #@ appName
            labels:
                name: #@ appName
        spec:
            containers:
                - name: #@ appName
                  image: #@ app.imageName
                  ports:
                      - containerPort: #@ app.appPort
                  resources:
                      requests:
                          memory: 256Mi
                      limits:
                          memory: 256Mi
                  volumeMounts:
                      - name: config-volume
                        mountPath: /app/.env
                      - name: secret-volume
                        mountPath: /app/.env.local
            volumes:
                - name: config-volume
                  configMap:
                      name: #@ app.configMapName
                - name: secret-volume
                  secretName: #@ app.secretName
